use latest snapshot of vabr to fix resiliency issues (hopefully), and fix listing spacing in UI for store lists. Try to address NPE in ContentAccessHandler

--- a/uis/layover/src/main/js/app/css/aprox.css
+++ b/uis/layover/src/main/js/app/css/aprox.css
@@ -84,6 +84,11 @@ header{
   border-collapse: separate;
 }
 
+.store-listing-item{
+	margin-bottom: 20px;
+	border: 1px solid #ddd;
+}
+
 .listing-item-end td{
   padding-bottom: 10px;
 }
